--- a/views/mixins/imgBlock.pug
+++ b/views/mixins/imgBlock.pug
@@ -1,6 +1,5 @@
 mixin imgBlock(img={})
     .imgBlock 
-        a(href=`#`)
+        a(href=`/detail/${img.id}`)
             img(src=`${img.path}`)
             span.img_title=img.title
-            //- img.imgBlock_img(src="#")
