--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,5 +5,6 @@
 @import url("./home.css");
 @import url("./imgBlock.css");
 @import url("./upload.css");
+@import url("./detail.css");
 @import url("./login.css");
 
